SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/AWS_PRICING_RDS__c.object
<CustomObject>
    <fields>
        <fullName>ClockSpeed__c</fullName>
        <label>ClockSpeed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGeneration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CurrentGeneration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DatabaseEdition__c</fullName>
        <label>DatabaseEdition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DatabaseEngine__c</fullName>
        <label>DatabaseEngine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DedicatedEbsThroughput__c</fullName>
        <label>DedicatedEbsThroughput</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeploymentOption__c</fullName>
        <label>DeploymentOption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>EffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndingRange__c</fullName>
        <label>EndingRange</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EngineCode__c</fullName>
        <label>EngineCode</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnhancedNetworkingSupported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnhancedNetworkingSupported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupDescription__c</fullName>
        <label>GroupDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceFamily__c</fullName>
        <label>InstanceFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceTypeFamily__c</fullName>
        <label>InstanceTypeFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceType__c</fullName>
        <label>InstanceType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseContractLength__c</fullName>
        <label>LeaseContractLength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseModel__c</fullName>
        <label>LicenseModel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationType__c</fullName>
        <label>LocationType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxVolumeSize__c</fullName>
        <label>MaxVolumeSize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory__c</fullName>
        <label>Memory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinVolumeSize__c</fullName>
        <label>MinVolumeSize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkPerformance__c</fullName>
        <label>NetworkPerformance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizationSizeFactor__c</fullName>
        <label>NormalizationSizeFactor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferTermCode__c</fullName>
        <label>OfferTermCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferingClass__c</fullName>
        <label>OfferingClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalProcessor__c</fullName>
        <label>PhysicalProcessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceDescription__c</fullName>
        <label>PriceDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricePerUnit__c</fullName>
        <label>PricePerUnit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessorArchitecture__c</fullName>
        <label>ProcessorArchitecture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessorFeatures__c</fullName>
        <label>ProcessorFeatures</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>ProductFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseOption__c</fullName>
        <label>PurchaseOption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateCode__c</fullName>
        <label>RateCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedTo__c</fullName>
        <label>RelatedTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCode__c</fullName>
        <label>ServiceCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <label>ServiceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sku__c</fullName>
        <label>Sku</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartingRange__c</fullName>
        <label>StartingRange</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StorageMedia__c</fullName>
        <label>StorageMedia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <label>Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermType__c</fullName>
        <label>TermType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageType__c</fullName>
        <label>UsageType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCpu__c</fullName>
        <label>VCpu</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeType__c</fullName>
        <label>VolumeType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AWS_PRICING_RDS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sku__c</columns>
        <columns>TermType__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Unit__c</columns>
        <columns>PricePerUnit__c</columns>
        <columns>LeaseContractLength__c</columns>
        <columns>PurchaseOption__c</columns>
        <columns>OfferingClass__c</columns>
        <columns>Location__c</columns>
        <columns>InstanceType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>AWS_PRICING_RDS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS_PRICING_RDS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>